--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   location: ^5.0.3
   google_maps_flutter: ^2.5.3
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
