--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_maps_flutter: ^2.5.3
   path_provider: ^2.1.2
   package_info_plus: ^4.2.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
