--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path_provider: ^2.1.2
   package_info_plus: ^4.2.0
   http: ^1.1.0
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
